--- a/src/styles/EditSectionPage.css
+++ b/src/styles/EditSectionPage.css
@@ -55,3 +55,49 @@
     max-width: 150px;
     margin-block: 20px;
 }
+
+.section-content .img-upload-container {
+    margin-top: 20px;
+}
+
+.dark-theme .edit-section-page > .section-content {
+    width: 66%;
+    min-height: 33vh;
+    margin: 2em auto;
+    background: var(--background-accent-color);
+    border-radius: 8px;
+    padding: 2em;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+}
+  
+.dark-theme .edit-section-page textarea {
+    width: 100%;
+    min-height: 25vh;
+    border: none;
+    background-color: var(--input-background-color);
+    color: var(--text-color);
+}
+
+.dark-theme .edit-section-btn-container button {
+    background-color: var(--button-background-color);
+    color: var(--button-text-color);
+    border: none;
+    border-radius: 5px;
+    padding: 0.7em 1.5em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100px;
+    text-align: center;
+    margin-left: 10px;
+    margin-bottom: 15px;
+}
+
+.dark-theme .edit-section-page label {
+    color: var(--text-color);
+}
+
+.dark-theme .edit-section-btn-container button:hover {
+    background-color: var(--button-background-hover-color);
+}
